# libspf

./: AUTHORS  CHANGELOG  COPYING  Changes  FAQ  INSTALL  Makefile.am  Makefile.in  README.md  TODO  VERSION  aclocal.m4  config.h.in  configure  configure.in
CVS/: Entries  Repository
build_tools/: bewm.sh
build_tools/CVS/: Entries  Repository
docs/: README
docs/API/: api_cache.html  debugging_libspf_1.0.txt  doxygen-libspf.cfg  index.html
docs/API/CVS/: Entries  Repository
docs/API/doxygen/CVS/: Repository
docs/API/doxygen/html/: annotated.html  dns_8c-source.html  dns_8c.html  dns_8c__incl.map  dns_8c__incl.md5  dns_8c_a0_cgraph.md5  dns_8c_a1_cgraph.map  dns_8c_a3_cgraph.md5  dns_8c_a6_cgraph.map  dns_8h-source.html  dns_8h.html  dns_8h__dep__incl.md5  dns_8h__incl.md5  dns_8h_a11_cgraph.map  dns_8h_a11_cgraph.md5  dns_8h_a13_cgraph.md5  dns_8h_a4_cgraph.map  dns_8h_a4_cgraph.md5  dns_8h_a7_cgraph.map  dns_8h_a7_cgraph.md5  dns_8h_a8_cgraph.md5  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  index.html  macro_8c-source.html  macro_8c.html  macro_8c__incl.map  macro_8c__incl.md5  macro_8c_a0_cgraph.map  macro_8c_a0_cgraph.md5  macro_8c_a1_cgraph.md5  (+136 more)
docs/API/doxygen/html/CVS/: Entries  Repository
docs/CVS/: Entries  Repository
docs/Courier-MTA/: README
docs/Courier-MTA/CVS/: Entries  Repository
docs/Postfix/: README
docs/Postfix/2.1.x/CVS/: Repository
docs/Postfix/CVS/: Repository
docs/RFC/: spf-draft-200405.txt
docs/RFC/CVS/: Entries  Repository
docs/Sendmail/: README  sendmail.cf.example
docs/Sendmail/8.12.x/: sendmail-8.12.x-libspf-0.2x-HOWTO
docs/Sendmail/8.12.x/CVS/: Entries  Repository
docs/Sendmail/8.13.x/: sendmail-8.13.0-libspf-1.0-HOWTO.txt  sendmail-8.13.1+libspf-1.0-HOWTO.html
docs/Sendmail/8.13.x/CVS/: Entries  Repository
docs/Sendmail/CVS/: Entries  Repository
docs/history/: CHANGELOG-0.0.1-0.0.26  CHANGELOG-1.0.0-RC1  CHANGELOG-1.0.0-RC2  CHANGELOG-1.0.0-RC3  CHANGELOG-1.0.0-RC4  CHANGELOG-1.0.0-RC5  CHANGELOG-1.0.0-p1  CHANGELOG-1.0.0-p2
docs/history/CVS/: Entries  Repository
docs/qmail/: README.html  control_files.html  index.html  libSPF.css  tcpserver_vars.html
docs/qmail/1.03/CVS/: Repository
docs/qmail/1.04/CVS/: Repository
docs/qmail/1.05/: netqmail-1.05-libspf-1.0.0-RC5-HOWTO.html
docs/qmail/1.05/CVS/: Entries  Repository
docs/qmail/CVS/: Entries  Repository
docs/spfqtool/: README.html  spfqtool.html
docs/spfqtool/CVS/: Entries  Repository
examples/CVS/: Repository
examples/Sendmail/: sendmail.cf  sendmail.mc.example  spf.m4
examples/Sendmail/CVS/: Entries  Repository
examples/qmail/CVS/: Repository
examples/qmail/control/: spfbestguess  spfexplanation  spftrustedforwarder
examples/qmail/control/CVS/: Entries  Repository
patches/: README
patches/CVS/: Repository
patches/Courier-MTA/: courier-0.45.4-spf.diff
patches/Courier-MTA/CVS/: Entries  Repository
patches/Postfix/: README
patches/Postfix/2.1.x/: postfix-2.1.4-libspf-1.0-RC6.diff
patches/Postfix/2.1.x/CVS/: Entries  Repository
patches/Postfix/CVS/: Entries  Repository
patches/Sendmail/: README
patches/Sendmail/8.12.x/: sendmail-8.12.10-libspf.0.24.diff  sendmail-8.12.11-libspf.0.25.diff  sendmail-8.12.11-libspf.0.25.fixed.diff
patches/Sendmail/8.12.x/CVS/: Entries  Repository
patches/Sendmail/8.13.x/: sendmail-8.13.0-libspf-1.0-RC3.diff  sendmail-8.13.1-libspf-1.0-RC5.diff  sendmail-8.13.1-libspf-1.0-RC6.diff  sendmail-8.13.4-libspf-1.0.diff
patches/Sendmail/8.13.x/CVS/: Entries  Repository
patches/Sendmail/CVS/: Repository
patches/qmail/: README
patches/qmail/1.03/: qmail-1.03.solaris.patch
patches/qmail/1.03/CVS/: Entries  Repository
patches/qmail/1.05/: Makefile-dynamic-1.05.diff  Makefile-static-1.05.diff  netqmail-1.05-libspf-0.25.diff  netqmail-1.05-libspf-1.0.0-RC5.diff  netqmail-1.05-libspf-1.0.0-RC6.diff
patches/qmail/1.05/CVS/: Entries  Repository
patches/qmail/CVS/: Repository
src/: Makefile.am  Makefile.in  README
src/CVS/: Entries  Repository
src/libspf/: Makefile.am  Makefile.in  _stdint.h  dns.c  dns.h  macro.c  macro.h  main.c  main.h  spf.h  spf.h.in  util.c  util.c.in  util.h
src/libspf/CVS/: Entries  Repository
src/spfqtool/: INSTALL  Makefile.am  Makefile.in  spfqtool.c  spfqtool.h  test.pl  test.txt
src/spfqtool/CVS/: Entries  Repository
